testdata/baselines/reference/compiler/chineseCharactersCompletion.errors.txt
chineseCharactersCompletion.ts(15,35): error TS1005: ')' expected.


==== chineseCharactersCompletion.ts (1 errors) ====
    // Test Chinese characters in TypeScript
    interface Point {
        上居中: string;
        下居中: string; 
        右居中: string;
        左居中: string;
    }
    
    class TSLine {
        setLengthTextPositionPreset(preset: "上居中" | "下居中" | "右居中" | "左居中"): void {}
    }
    
    // Test completion on method call
    let lines = new TSLine();
    lines.setLengthTextPositionPreset(
                                      
!!! error TS1005: ')' expected.